// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align prop sets text-align 1`] = `
.c0 {
  text-align: center;
}

<div
  align="center"
  className="c0"
  is={null}
/>
`;

exports[`Text bold prop sets font-weight 1`] = `
.c0 {
  font-weight: 700;
}

<div
  bold={true}
  className="c0"
  is={null}
  theme={
    Object {
      "bold": 700,
      "breakpoints": Array [
        32,
        40,
        48,
        64,
      ],
      "colors": Object {
        "black": "#000",
        "blue": "#0a84c1",
        "white": "#fff",
      },
      "font": "'Helvetica Neue',Helvetica,Arial,sans-serif",
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
      ],
      "fontWeights": Array [
        400,
        700,
      ],
      "mediaQueries": Array [
        "@media screen and (min-width:32em)",
        "@media screen and (min-width:40em)",
        "@media screen and (min-width:48em)",
        "@media screen and (min-width:64em)",
      ],
      "regular": 400,
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
      ],
    }
  }
/>
`;

exports[`Text caps prop sets text-transform and letter-spacing 1`] = `
.c0 {
  text-transform: uppercase;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
}

<div
  caps={true}
  className="c0"
  is={null}
/>
`;

exports[`Text renders 1`] = `
<div
  className=""
  is={null}
/>
`;
